ADICIONEI  UM PARAGRAFO

--- a/Site.exemplo/index.html
+++ b/Site.exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>ola,mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro accusantium quasi rem saepe accusamus nisi, quos aliquid temporibus enim magnam, totam, sed dolore. Ducimus consequatur deserunt cupiditate at quae quam.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad sapiente itaque natus dolores, inventore nulla rerum rem cupiditate saepe nisi totam corporis amet voluptate odit exercitationem beatae? Officia, omnis et.</p>
 </body>
 </html>
